# matchbot-core

./: .env  Cargo.toml  sqlx-data.json
src/: lib.rs  matches.rs  team.rs  tournament.rs
