[package]
name = "matchbot_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "tls", "offline"] }
anyhow = "1.0.66"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.3"
time = { version = "0.3.20", features = ["serde"] }